Add JPMS support.